V1.0.1 Top menu alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ p.links {
     font-size: 14pt;
     background: black;
     padding-right: 10px;
+    text-align: center;
 }
 span.drop {
     color:black;
